--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_PORT=3306
 DB_DATABASE=firstproj
 DB_USERNAME=root
 DB_PASSWORD=
-
+git
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
